[metadata]
name = ipycolorful
version = attr: ipycolorful._version.__version__
description = A Jupyter widget for react-colorful.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = João Palmeiro
author_email = jm.palmeiro@campus.fct.unl.pt
url = https://github.com/joaopalmeiro/ipycolorful
keywords = jupyter, widgets, ipython

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    ipywidgets>=7.0.0,<8
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal=1
