[metadata]
name = ipycolorful
version = attr: ipycolorful._version.__version__
description = A Jupyter widget for react-colorful.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joaopalmeiro/ipycolorful
author = João Palmeiro
author_email = jm.palmeiro@campus.fct.unl.pt
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = jupyter, widgets, ipython

[options]
packages = find:
install_requires =
    ipywidgets>=7.0.0,<8
python_requires = >=3.6
include_package_data = True
zip_safe = False

[bdist_wheel]
universal = 1
